fixed(?) overflow of loading-screen content

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -24,8 +24,13 @@
 
 body{
   -webkit-font-smoothing: antialiased;
+	-ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 }
 
+body::-webkit-scrollbar{
+	display: none;
+}
 
 
 .glitchHeading {
